--- a/package.json
+++ b/package.json
@@ -11,5 +11,11 @@
   "repository": {
     "type": "git",
     "url": "git@github.com:subgb/socket.io-cap.git"
+  },
+  "dependencies": {
+    "chalk": "^2.4.1",
+    "hoxy": "^3.3.1",
+    "lodash": "^4.17.11",
+    "socket.io": "^2.1.1"
   }
 }
